# BilliardsTrainer

./: .gitignore  CMakeLists.txt  README.md  build.bat  settings.txt
src/: diamond_detection.cpp  diamond_detection.h  felt_detection.cpp  felt_detection.h  main.cpp  main.h  orientation_detector.h  rail_detection.cpp  rail_detection.h
src/DiamondDetection/: diamond_detection.cpp  diamond_detection.h
src/FeltDetection/: felt_detection.cpp  felt_detection.h
src/OrientationDetection/: orientation_detector.cpp
src/RailDetection/: rail_detection.cpp  rail_detection.h
